fixed middle col alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -127,6 +127,7 @@ input[type="button"]:focus {
     margin-bottom: 15px;
     padding: 3px;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 table {
@@ -137,7 +138,7 @@ table {
 
 td {
     text-align: left;
-    padding: 12px;
+    padding: 10px;
 }
 
 tr:nth-child(even){
